Fix Vercel deployment: rename Prisma folder, fix prisma config, add CORS, fix inngest import bug

--- a/Server/package.json
+++ b/Server/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "postinstall": "npx prisma generate",
-    "start": " prisma generate && node server.js",
-    "server": "nodemon server.js"
+    "postinstall": "prisma generate --schema=./prisma/schema.prisma",
+    "build": "prisma generate --schema=./prisma/schema.prisma",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "prisma": {
+    "schema": "./prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
