--- a/Server/package.json
+++ b/Server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
     "postinstall": "prisma generate --schema=./prisma/schema.prisma",
     "build": "prisma generate --schema=./prisma/schema.prisma",
@@ -24,12 +24,12 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "inngest": "^3.52.4",
+    "prisma": "^5.22.0",
     "ws": "^8.19.0"
   },
   "devDependencies": {
     "@types/node": "^25.3.2",
     "nodemon": "^3.1.14",
-    "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
