Simplify API for Vercel testing - minimal express server

--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "functions": {
-    "api/**/*.js": {
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/api/index.js"
+      "src": "api/index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
     }
   ]
 }
