--- a/Server/package.json
+++ b/Server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "api/index.js",
   "scripts": {
-    "postinstall": "prisma generate --schema=./prisma/schema.prisma",
-    "build": "prisma generate --schema=./prisma/schema.prisma",
+    "build": "echo 'Build complete'",
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
